# Aloja

./: Dockerfile  LICENSE  README.md
ALOJA/: ALOJA.py  mutation_injection.py  parse_callgraph.py  parse_callgraph_Plus.py  runclient.py  runclient2.py  runserver.py  runserver2.py  test_mqttc_1.sh  test_mqttc_2.sh  test_mutants_Plus_cyclonedds.py  test_mutants_Plus_wakaama.py  test_mutants_mosquitto.py  test_mutants_mqttc.py
ALOJA/bitcode/mosquitto/: mosquitto_sub.ll  mosquitto_sub_mutated.ll  mosquitto_sub_mutated_old.ll
ALOJA/bitcode/mqttc/: simple_publisher.ll  simple_publisher_mutated.ll  simple_subscriber.ll  simple_subscriber_mutated.ll
ALOJA/bitcode/wakaama/: README.md  lightclient.bc  lwm2mserver.bc  wakaama-functions.txt  wakaama-structs.txt
ALOJA/injection_controllers/: aloja_int16.py  aloja_int32.py  aloja_int64.py
ALOJA/temp_outputs/: PaCo_output.json  callgraph_contents.json  commands.json
ALOJA/utils/: change_global_variable.py  change_mutation_flag.py  fields_index_name_parser.py  get_indices.py  get_necessary_info_for_injection.py  get_necessary_info_for_injection_Plus.py  get_structs_fields.py  other_comm_funcs.py  update_number.py
PaCo/python/: PaCo.py  PaCo_Controller.py  PaCo_Full.py  PaCo_Plus.py  PaCo_pipelineFuncs.py  comm_funcs.py  compare_function_list.py  fields_index_name_parser.py  filter_structs.py  filter_structs_Plus.py  filter_structs_cyclonedds.py  filter_structs_full.py  filter_structs_mqttc.py  filter_structs_mqttc_full.py  get_funcs_for_struct.py  get_structs_fields.py  get_structs_list.py  llvm_to_json.py  structs_In_HelloworldSubscriber2.txt  temp.json  tempList.txt  test.json  test.py  test_dsvpn2.json  test_mosquitto2.json  test_mqttc_publisher2.json  test_wakaama2.json
dg/: buildDG.sh
passes/: README.md
passes/StructAnalysis/: CMakeLists.txt  FunctionParser.cpp  InjectFuncCall.cpp  Mutate.cpp  MutateMod.cpp  MyTest.cpp  StructAnalysis.cpp
passes/clang/: CMakeLists.txt  README.md
passes/clang/mutate/: CMakeLists.txt
passes/dfanalysis/: CMakeLists.txt  README.md
passes/include/: FunctionParser.h  InjectFuncCall.h  Mutate.h  MutateMod.h  MyTest.h  StructAnalysis.h
(+62 files in other folders)
